--- a/index.html
+++ b/index.html
@@ -286,9 +286,12 @@
 <html>
 <head>
 	<title>LCRF</title>
-	<meta property="og:image" content="Path to my teaser.png"/>
-	<meta property="og:title" content="LCRF" />
-	<meta property="og:description" content="Paper description." />
+	<meta property="og:image" content="./resources/intro.jpeg"/>
+	<meta property="og:title" content="LatentCRF" />
+	<meta property="og:description" content="LatentCRF speeds up latent diffusion based text-to-image with a novel CRF based architecture." />
+
+	<!-- Favicon -->
+	<link rel="icon" href="./resources/favicon.png" type="image/png">
 
 	<!-- Get from Google Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
